fix volume & workdir

--- a/php-composer/Dockerfile
+++ b/php-composer/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update -y \
 RUN curl -sS https://getcomposer.org/installer -o composer-setup.php \
     && php composer-setup.php --install-dir=/usr/local/bin --filename=composer
 RUN echo "[PHP] \ndate.timezone = Asia/Bangkok \n short_open_tag = on " >> /etc/php/7.0/fpm/php.ini
-VOLUME ["/www"]
-WORKDIR ["/www"]
+VOLUME /www
+WORKDIR /www
 CMD php -S 0.0.0.0:80 -t ./
 EXPOSE 80 443
