--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update -y \
     && apt-get install -y --no-install-recommends libgd-dev \
     && rm -rf /var/lib/apt/lists/*
 RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
+RUN docker-php-ext-install pdo pdo_mysql
 RUN docker-php-ext-install mysqli gd
 RUN a2enmod rewrite
 RUN echo "<?php phpinfo(); " > /var/www/html/index.php
