--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:5.6-apache
+FROM php:7-apache
 LABEL maintainer "Best Sira <sirawat21@gmail.com>"
 ENV ENVIRONMENT production
 RUN echo "[PHP] \ndate.timezone = Asia/Bangkok" >> /usr/local/etc/php/php.ini
@@ -9,7 +9,7 @@ RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-di
 RUN docker-php-ext-install pdo pdo_mysql
 RUN docker-php-ext-install mysqli gd
 RUN a2enmod rewrite
-RUN echo "<?php phpinfo(); " > /var/www/html/index.php
+RUN echo "<?php phpinfo(); " > /var/www/html/test-php-info.php
 RUN chmod 777 /var/www/html/index.php
 VOLUME [ "/var/www/html" ]
 EXPOSE 80 443
