split npm command

--- a/nodejs-nodemon/Dockerfile
+++ b/nodejs-nodemon/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:latest
 LABEL maintainer "Best Sira <sirawat21@gmail.com>"
 RUN apt-get update -y \
     && ap-get install -y git npm nodejs
-RUN npm update \
-    && npm insall -g nodemon \
-    && npm install
+RUN npm update
+RUN npm insall -g nodemon
+RUN npm install
 WORKDIR /www
