--- a/nodejs-nodemon/Dockerfile
+++ b/nodejs-nodemon/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:latest
 LABEL maintainer "Best Sira <sirawat21@gmail.com>"
-RUN apt-get update -y \
-    && apt-get install -y git npm nodejs
+RUN apt-get update -y
+RUN apt-get install -y git npm nodejs
 RUN npm update
 RUN npm insall -g nodemon
 RUN npm install
