--- a/nodejs-nodemon/Dockerfile
+++ b/nodejs-nodemon/Dockerfile
@@ -3,6 +3,6 @@ LABEL maintainer "Best Sira <sirawat21@gmail.com>"
 RUN apt-get update -y
 RUN apt-get install -y git npm nodejs
 RUN npm update
-RUN npm insall -g nodemon
+RUN npm install -g nodemon
 RUN npm install
 WORKDIR /www
