rewrite nodejs Dockerfile

--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -1,8 +1,6 @@
 FROM ubuntu:latest
-LABEL maintainer "Best Sira <sirawat21@gmail.com>"
+LABEL maintainer "Best <sirawat21@gmail.com>"
 RUN apt-get update -y
-RUN apt-get install -y git npm nodejs
-RUN npm update
-RUN npm install -g nodemon
-RUN npm install
-WORKDIR /www
+RUN apt-get install -y npm nodejs
+RUN npm i
+RUN rm -rf /var/lib/apt/lists/*
